{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "PlayerAction",
            "id": "5cff6ce3-5e65-4d8f-b13a-279241c1a564",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "45b88538-4200-49e8-8b85-b44c8f660766",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Take",
                    "type": "Button",
                    "id": "55c8ac60-8037-473d-91a5-11e68a7d933f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "bbb447b6-8629-4177-b0b7-6066fbb1e84c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2dcf4329-5f44-4472-af52-0210d1ce7903",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c96d3edd-b79d-4d8e-a4da-89eea4ca13c8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "24445679-fc75-48d5-85ec-0f26708d4b38",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8c20250a-c048-4efa-b6b1-c31cfe0799f0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c19dcc4b-91a1-4517-a153-2a161ec18a61",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "becdf586-69c0-4485-92c2-770b6015653e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Take",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2af1f64d-1496-49ba-9dfb-9cc03e673a37",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}